# whatsie

./: .cmake-gitignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/: FUNDING.yml
.github/workflows/: build.yml  release-dry-run.yml  release.yml  windows-build.yml
DOCS/: BUILD_QUICK_REFERENCE.md  CMAKE_MIGRATION.md  WINDOWS_BUILD.md
debianpkg/: README.md  gitignore.txt
debianpkg/data/: com.ktechpit.whatsie.desktop  whatsie
debianpkg/debian/: control  copyright  rules
screenshots/: format.xcf
snap/: snapcraft.yaml
snap_launcher/: whatsie.desktop
src/: SunClock.cpp  SunClock.hpp  WhatsApp.pro  about.cpp  about.h  about.ui  autolockeventfilter.h  automatictheme.cpp  automatictheme.h  automatictheme.ui  certificateerrordialog.ui  common.cpp  common.h  def.h  dictionaries.cpp  dictionaries.h  downloadmanagerwidget.cpp  downloadmanagerwidget.h  downloadmanagerwidget.ui  downloadwidget.cpp  downloadwidget.h  downloadwidget.ui  elidedlabel.cpp  elidedlabel.h  icons.qrc  identicons.cpp  identicons.h  linkeddevicename.cpp  linkeddevicename.h  lock.cpp  lock.h  lock.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_lock.cpp  mainwindow_tray.cpp  mainwindow_webengine.cpp  notificationpopup.h  passworddialog.ui  (+29 more)
src/dictionaries/: da_DK.dic  de_DE_neu.dic_delta  en_AU.aff  en_AU.dic  en_US.dic  en_US.dic_delta  fr_FR.aff  fr_FR.dic  lv_LV.aff  lv_LV.dic  nl_NL.aff  nl_NL.dic  pt_BR.aff  pt_BR.dic  ro_RO.aff  ro_RO.dic  ru_RU.aff  ru_RU.dic  ru_RU.dic_delta  sl_SI.dic  sv_SE.aff  sv_SE.dic  urls
src/i18n/: it_IT.ts
src/icons/: icon-512.xcf
src/icons/app/: notification_resize.sh  resize.sh
src/singleapplication/: singleapplication.h  singleapplication.pri
src/tools/: find_qwebengine_convert_dict.sh
src/widgets/MoreApps/: MoreApps.pri  moreapps.cpp  moreapps.h  moreapps.ui
src/widgets/elidedlabel/: elidedlabel.cpp
src/widgets/scrolltext/: scrolltext.cpp  scrolltext.h
